12-eck/8-eck-kibana-ingress_kctl.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elastic-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example.com
    secretName: ssl-cert-production
  rules:
  - host: example.com
    http:
      paths:
      paths:
      - path: /kibana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kibana-kb-http
            port:
              number: 443
